Remove NIO and use Mutex

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
      with:
         with_windows: true
         with_musl: true
+        with_android: true
      secrets: inherit
 
   integration-check:
