--- a/.github/workflows/api-docs.yml
+++ b/.github/workflows/api-docs.yml
@@ -10,5 +10,5 @@ jobs:
      secrets: inherit
      with:
        package_name: console-kit
-       modules: ConsoleKit,ConsoleKitTerminal,ConsoleKitCommands
-       pathsToInvalidate: /consolekit/* /consolekitterminal/* /consolekitcommands/*
+       modules: ConsoleKit,ConsoleKitTerminal
+       pathsToInvalidate: /consolekit/* /consolekitterminal/*
